move hivesigner cb into its own module

--- a/snippets/hivesigner.html
+++ b/snippets/hivesigner.html
@@ -5,20 +5,9 @@
   </head>
   <body>
     Redirecting back to Aioha app...
-    <script>
-      let url = new URL(window.location.href)
-      let txid = url.searchParams.get('id')
-      if (txid) {
-        localStorage.setItem('hivesignerTxId', txid)
-      } else {
-        localStorage.setItem('hivesignerToken', url.searchParams.get('access_token'))
-        localStorage.setItem(
-          'hivesignerExpiry',
-          Math.floor(new Date().getTime() / 1000 + parseInt(url.searchParams.get('expires_in')))
-        )
-        localStorage.setItem('hivesignerUsername', url.searchParams.get('username'))
-      }
-      setTimeout(() => window.close(), 1000)
+    <script type="module">
+      import { hivesignerCb } from 'https://unpkg.com/@aioha/aioha@latest/dist/hivesigner-cb.js'
+      hivesignerCb()
     </script>
   </body>
 </html>
